fix(checkbox): updated stroke on small checkbox mark

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -7584,9 +7584,11 @@ input:focus {
 }
 
 .e-checkbox__label {
-  font-size: inherit;
-  margin-left: 8px;
+  font-family: "Red Hat Text", Verdana, sans-serif;
+  font-size: 16px;
   line-height: 24px;
+  font-weight: 400;
+  margin-left: 8px;
   width: fit-content;
 }
 
@@ -7644,6 +7646,8 @@ input:focus {
 .e-checkbox.e-checkbox--indeterminate.e-checkbox--sm .e-checkbox__mark::before {
   left: calc(50% - 4px);
   width: 8px;
+  top: calc(50% - 0.5px);
+  height: 1px;
 }
 
 .e-checkbox.e-checkbox---focus .e-checkbox__mark {
@@ -7662,6 +7666,10 @@ input:focus {
   cursor: not-allowed;
 }
 
+.e-checkbox.e-checkbox---disabled .e-checkbox__label {
+  cursor: not-allowed;
+}
+
 .e-checkbox.e-checkbox---disabled-checked .e-checkbox__mark {
   border-color: #bdbdbd !important;
   background-color: #f4f4f4 !important;
@@ -7674,6 +7682,7 @@ input:focus {
 
 .e-checkbox.e-checkbox---disabled-checked .e-checkbox__label {
   color: #676767;
+  cursor: not-allowed;
 }
 
 .e-checkbox.e-checkbox---invalid .e-checkbox__mark {
@@ -7723,6 +7732,7 @@ input:focus {
 
 .e-checkbox input:disabled ~ .e-checkbox__label {
   color: #676767;
+  cursor: not-allowed;
 }
 
 .e-checkbox input:invalid ~ .e-checkbox__mark {
@@ -7791,7 +7801,7 @@ input:focus {
   top: 50%;
   left: -28%;
   height: 39%;
-  width: 2px;
+  width: 1px;
   background-color: #000;
   border-radius: 15px;
   -o-transform: translateX(10px) rotate(-45deg);
@@ -7813,7 +7823,7 @@ input:focus {
   position: absolute;
   bottom: 15%;
   left: -25%;
-  height: 2px;
+  height: 1px;
   width: 0%;
   background-color: #000;
   border-radius: 15px;
