--- a/packages/elvis/src/components/form/checkbox.scss
+++ b/packages/elvis/src/components/form/checkbox.scss
@@ -41,9 +41,11 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
   }
 
   &__label {
-    font-size: inherit;
-    margin-left: 8px;
+    font-family: 'Red Hat Text', Verdana, sans-serif;
+    font-size: 16px;
     line-height: 24px;
+    font-weight: 400;
+    margin-left: 8px;
     width: fit-content;
   }
 
@@ -100,6 +102,8 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     &.e-checkbox--sm .e-checkbox__mark::before {
       left: calc(50% - 4px);
       width: 8px;
+      top: calc(50% - 0.5px);
+      height: 1px;
     }
   }
 
@@ -132,6 +136,9 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       background-color: colors.color('disabled-light');
       cursor: not-allowed;
     }
+    .e-checkbox__label {
+      cursor: not-allowed;
+    }
   }
   &.e-checkbox---disabled-checked {
     .e-checkbox__mark {
@@ -147,6 +154,7 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     }
     .e-checkbox__label {
       color: colors.color('grey-70');
+      cursor: not-allowed;
     }
   }
   // extends correct checkbox mark on small checkboxes in pseudoclass
@@ -203,6 +211,7 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     }
     &:disabled ~ .e-checkbox__label {
       color: colors.color('grey-70');
+      cursor: not-allowed;
     }
 
     &:invalid ~ .e-checkbox__mark {
@@ -262,7 +271,7 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       top: 50%;
       left: -28%;
       height: 39%;
-      width: 2px;
+      width: 1px;
       background-color: colors.color('elvia-off');
       border-radius: 15px;
       @include helpers.transform(translateX(10px) rotate(-45deg));
@@ -278,7 +287,7 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       position: absolute;
       bottom: 15%;
       left: -25%;
-      height: 2px;
+      height: 1px;
       width: 0%;
       background-color: colors.color('elvia-off');
       border-radius: 15px;
