--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.scss
@@ -102,6 +102,10 @@
       }
     }
 
+    .no-interaction {
+      pointer-events: none;
+    }
+
     .element {
       display: block;
       height: 100%;
